--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="https://kit.fontawesome.com/9ff6517bd7.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./manualimages/logoC1.jpg">
     <link rel="stylesheet" href="./CSS/index.css">
-    <link rel="stylesheet" href="/CSS/index2.css">
-    <link rel="stylesheet" href="/CSS/iFlixBanner.css">
+    <link rel="stylesheet" href="./CSS/index2.css">
+    <link rel="stylesheet" href="./CSS/iFlixBanner.css">
     <link rel="stylesheet" href="./CSS/searchbar.css">
   </head>
   <html>
